--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,13 @@
+    addcertifi==2021.5.30
+charset-normalizer==2.0.4
+idna==3.2
+numpy==1.21.1
+pandas==1.3.1
+python-dateutil==2.8.2
+pytz==2021.1
+requests==2.26.0
 selenium==3.141.0
+six==1.16.0
+tk==0.1.0
 urllib3==1.26.4
+XlsxWriter==3.0.1
